Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58749

QListView AdjustToContents not working

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.2.0
    • 5.7.0
    • None
    • OS Windows 10
    • 90eef3b71fa14cb5df1b7ad0519fa7ac2d962f60

    Description

      When add QListView to QScrollArea and set SizeAdjustPolicy to AdjustToContents QListView is not resized to content size and have scroll bars. For example QTableView and QTreeView are working perfectly.

      Attachments

        1. qt_bug58749_auto_adjust.zip
          3 kB
          Thorbjørn Lund Martsum
        2. QScrollArea.png
          12 kB
          Roman khalupa
        3. QScrollare.zip
          2 kB
          Roman khalupa
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmartsum Thorbjørn Lund Martsum
            khalupa.roman Roman khalupa
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes